.provarCaches/00D5f000005vwGkEAI/objects/rstk__supreq__c.object
<CustomObject>
    <description>supreq__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__supreq_div__r.rstk__sydiv_div__c &amp; rstk__supreq_ordno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__supreq_ordno__c &amp; &apos; &apos; &amp; &apos;(&apos; &amp; rstk__supreq_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, this requisition has been accepted.</inlineHelpText>
        <label>Requisition Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_containerpct__c</fullName>
        <formula>rstk__supreq_qtyreq__c /  rstk__supreq_supitem__r.rstk__supitem_qtypercontainer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calulated field:  Indicates percentage of standard container that this requisition quantity will require.  The percentage for one unit is held on the inventory item master record.  May be entered manually.</inlineHelpText>
        <label>Container Use Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_currconsoldate__c</fullName>
        <inlineHelpText>This is the Date due at the Consolidation Center.  It is calculated based on the lead time on the supplier address record.</inlineHelpText>
        <label>Current Date Due at Consolidation Ctr.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_currpickupdate__c</fullName>
        <inlineHelpText>Date this item will be picked up at the Supplier site to meet the required arrival date at WMS.  If adjusted, this date will not match the Original Pickup Date which is maintained in another field.</inlineHelpText>
        <label>Current Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_currwmsdate__c</fullName>
        <inlineHelpText>Due date at WMS if shipped Direct.  Calculated from transit time on supplier address record.</inlineHelpText>
        <label>Current Date Due to Dublin Port</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_dateaccepted__c</fullName>
        <inlineHelpText>Date supplier accepted this requisition.  Auto-entered when supplier changes requisition status to &apos;Accepted&apos;.</inlineHelpText>
        <label>Date Accepted by Supplier</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_datepickedup__c</fullName>
        <inlineHelpText>Date this item was picked up at the supplier facility.  Display only.</inlineHelpText>
        <label>Date Picked Up at Supplier</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_datereceived__c</fullName>
        <inlineHelpText>This is the date received into WMS.</inlineHelpText>
        <label>Date Received at WMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_datereceivedcon__c</fullName>
        <inlineHelpText>Received at Consolidation Center date.</inlineHelpText>
        <label>Date Received at Consolidation Ctr.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_enroutecon__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>En Route to Consolidation Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_icreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inventory Requistion</inlineHelpText>
        <label>Inventory Requisition</label>
        <referenceTo>rstk__icreq__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_ordnoSeq__c</fullName>
        <formula>IF( BEGINS(rstk__supreq_ordno__c, &apos;S&apos;) &amp;&amp; ISNUMBER( RIGHT(rstk__supreq_ordno__c,  LEN(rstk__supreq_ordno__c)-1 ) ),  VALUE(RIGHT(rstk__supreq_ordno__c,  LEN(rstk__supreq_ordno__c)-1 )) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Number Seq</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_ordno__c</fullName>
        <inlineHelpText>Requisition Number for this order.  Display only.</inlineHelpText>
        <label>Requisition Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_origconsoldate__c</fullName>
        <inlineHelpText>Original due date at Consolidation Center</inlineHelpText>
        <label>Original Date Due at Consolidation Ctr.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_origicreq__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Original Requisition</label>
        <referenceTo>rstk__icreq__c</referenceTo>
        <relationshipLabel>Supplier Requisitions (Original Requisition)</relationshipLabel>
        <relationshipName>supreqs_origicreq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_origpickupdate__c</fullName>
        <inlineHelpText>Original date requisition scheduled for pickup.  If the pickup date is changed, this date remains the same.  Used for reporting purposes.</inlineHelpText>
        <label>Original Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_origqty__c</fullName>
        <inlineHelpText>Original Requisition Quantity</inlineHelpText>
        <label>Original Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_origsupreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Supplier Requisition</label>
        <referenceTo>rstk__supreq__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_origwmsdate__c</fullName>
        <inlineHelpText>Original Due date at WMS</inlineHelpText>
        <label>Original Date Due at WMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_pickedup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicator to show the requisition has been picked up.</inlineHelpText>
        <label>Departed Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_poasn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Advance Shipment Notification Number (ASN) that this requisition has been assigned to.</inlineHelpText>
        <label>ASN Number</label>
        <referenceTo>rstk__poasn__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_pocontainer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Interim Shipment Container</label>
        <referenceTo>rstk__pocontainer__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_pocontctr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If routed to a consolidation center instead of directly to WMS, this identifies the specific consolidation center that will receive the goods.</inlineHelpText>
        <label>Consolidation Center</label>
        <referenceTo>rstk__poconctr__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_poshipShipmentid__c</fullName>
        <label>TMM Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_poship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inbound Shipment</label>
        <referenceTo>rstk__poship__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_poshipcontSerialno__c</fullName>
        <label>Container Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_poshipcontcc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Inbound container ID, if routed  to Consolidation Center.  Display from ASN.</inlineHelpText>
        <label>Inbound Container to Consol.</label>
        <referenceTo>rstk__poshipcont__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_poshipcontwms__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Inbound container ID if routed directly to WMS.  Display from ASN.</inlineHelpText>
        <label>Inbound Container to WMS</label>
        <referenceTo>rstk__poshipcont__c</referenceTo>
        <relationshipLabel>Supplier Requisitions (Inbound Container to WMS)</relationshipLabel>
        <relationshipName>supreqs_poshipcontwms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_poshipstep__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inbound Shipment Step</label>
        <referenceTo>rstk__poshipstep__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_povend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_povendpoaddr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Supplier&apos;s location that will fulfill the requirement for this part.  Must be valid address from this supplier&apos;s vendor master.</inlineHelpText>
        <label>Supplier Facility</label>
        <referenceTo>rstk__povendpoaddr__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>supreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_qtyreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_qtyship__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Shipped</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, Items have been received at WMS.</inlineHelpText>
        <label>Received at WMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_receivedcon__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, Items have been received at Consolidation Center.</inlineHelpText>
        <label>Received at Consolidation Ctr.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_supitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Supplier Part Number</inlineHelpText>
        <label>Part Number</label>
        <referenceTo>rstk__supitem__c</referenceTo>
        <relationshipLabel>Supplier Requisitions</relationshipLabel>
        <relationshipName>Supplier_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supreq_transittype__c</fullName>
        <inlineHelpText>Default from inventory item master.  Defines whether this shipment is Direct or going to a Consolidation Center.</inlineHelpText>
        <label>Transit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Consolidated</fullName>
                </value>
                <value>
                    <fullName>Expedite Direct</fullName>
                </value>
                <value>
                    <fullName>Expedite Consolidated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__supreq_venditem__c</fullName>
        <formula>rstk__supreq_supitem__r.rstk__supitem_venditem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Supplier Requisition</label>
    <listViews>
        <fullName>rstk__RS_Supplier_Requisitions</fullName>
        <columns>NAME</columns>
        <columns>rstk__supreq_div__c</columns>
        <columns>rstk__supreq_ordno__c</columns>
        <columns>rstk__supreq_icreq__c</columns>
        <columns>rstk__supreq_poasn__c</columns>
        <columns>rstk__supreq_qtyreq__c</columns>
        <columns>rstk__supreq_pocontctr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__supreq_poshipcontwms__c</columns>
        <columns>rstk__supreq_poship__c</columns>
        <columns>rstk__supreq_poshipstep__c</columns>
        <columns>rstk__supreq_receivedcon__c</columns>
        <columns>rstk__supreq_received__c</columns>
        <columns>rstk__supreq_pocontainer__c</columns>
        <columns>rstk__supreq_poshipcontcc__c</columns>
        <filterScope>Everything</filterScope>
        <label>Supplier Requisitions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Current_Pickup_Date</fullName>
        <active>true</active>
        <description>The Current Pickup Date cannot be less than today.</description>
        <errorConditionFormula>AND ( ISNEW(), 
  rstk__supreq_currpickupdate__c &lt;  TODAY() 
)</errorConditionFormula>
        <errorMessage>The Current Pickup Date cannot be less than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Interim_Shipment_Container</fullName>
        <active>true</active>
        <description>Supplier Requisition is already associated with other Interim Shipment Container.</description>
        <errorConditionFormula>ISCHANGED(rstk__supreq_pocontainer__c) &amp;&amp;  !ISBLANK(rstk__supreq_pocontainer__c) &amp;&amp; !ISBLANK( PRIORVALUE(rstk__supreq_pocontainer__c))</errorConditionFormula>
        <errorMessage>Supplier Requisition is already associated with other Interim Shipment Container.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Requisition_Accepted</fullName>
        <active>true</active>
        <description>Requisition Accepted field change is not allowed.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  ISCHANGED(rstk__supreq_accepted__c) &amp;&amp; (rstk__supreq_qtyship__c &gt; 0 || NOT(ISBLANK(rstk__supreq_poasn__c)))</errorConditionFormula>
        <errorMessage>Requisition Accepted field change is not allowed.</errorMessage>
    </validationRules>
</CustomObject>